[workspace]
resolver = "2"
members = [
    "kcheck",
]

[workspace.package]
version = "0.1.0"
license = "MPL-2.0"
authors = ["Jake Swensen <jake@swensen.io>"]
keywords = ["kernel", "kconfig", "linux", "embedded"]
description = "Kernel configuration checking utility"
repository = "https://github.com/jdswensen/kcheck"
edition = "2021"

[workspace.dependencies]
flate2 = "1.0.28"
nix = { version = "0.27.1", features = ["feature"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.50"
toml = "0.8.6"
