[workspace]
resolver = "2"
members = [
    "kcheck",
    "xtask"
]

[workspace.package]
version = "0.1.3"
license = "MPL-2.0"
authors = ["Jake Swensen <jake@swensen.io>"]
keywords = ["kernel", "kconfig", "linux", "embedded"]
description = "Kernel configuration checking utility"
repository = "https://github.com/jdswensen/kcheck"
edition = "2021"

[workspace.dependencies]
clap = { version = "4.5.4", features = ["derive"] }
cli-table = "0.4.7"
derive_builder = "0.12.0"
flate2 = "1.0.28"
insta = "1.34.0"
lazy_static = "1.4.0"
nix = { version = "0.27.1", features = ["feature"] }
regex = "1.10.4"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.50"
toml = "0.8.6"
rand = "0.8.5"
tempfile = "3.10.1"
