[workspace]
resolver = "2"
members = [
    "kcheck-cli",
    "xtask"
]

[workspace.package]
version = "0.2.1"
license = "MPL-2.0"
authors = ["Jake Swensen <jake@swensen.io>"]
keywords = ["kernel", "kconfig", "linux", "embedded"]
description = "A library for working with kernel configuration information."
repository = "https://github.com/jdswensen/kcheck"
edition = "2021"

[workspace.dependencies]
clap = { version = "4.5.4", features = ["derive"] }
cli-table = "0.4.7"
typed-builder = "0.20.0"
flate2 = "1.0.28"
insta = "1.34.0"
lazy_static = "1.4.0"
nix = { version = "0.27.1", features = ["feature"] }
regex = "1.10.4"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.50"
toml = "0.8.6"
rand = "0.8.5"
tempfile = "3.10.1"

[package]
name = "kcheck"
version.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
description.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = ["cli-table"]

[dependencies]
cli-table = { workspace = true, optional = true }
typed-builder.workspace = true
flate2.workspace = true
nix.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
insta.workspace = true
lazy_static.workspace = true
rand.workspace = true
tempfile.workspace = true
