[package]
name = "kcheck-cli"
version.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
description = "A utility for working with kernel configuration information."
repository.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
cli-table.workspace = true
kcheck = { version = "0.2", path = "../" }
