[package]
name = "kcheck-utils"
version.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
description.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
flate2.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
