[package]
name = "kcheck"
version.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
description.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
flate2.workspace = true
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
kcheck-utils.workspace = true
