[package]
name = "kcheck"
version.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
description.workspace = true
repository.workspace = true
edition.workspace = true

[[bin]]
name = "kcheck"
required-features = ["cli-table"]

[features]
default = ["cli-table"]

[dependencies]
cli-table = { workspace = true, optional = true }
derive_builder.workspace = true
flate2.workspace = true
nix.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
insta.workspace = true
lazy_static.workspace = true
rand.workspace = true
tempfile.workspace = true
