[package]
name = "xtask"
version.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
description.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
xtaskops = "0.4.2"
